Update link preview titles

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Spellbovnd are a Seattle based quintet consisting of Alessandro DeCaro, Joe Giordano, Cristian Ordonez, Trevor Farthing and Kirk Roa.">
-    <meta property="og:title" content="SPELLBOVND"/>
+    <meta property="og:title" content="SPELLBOVND | Home"/>
     <meta property="og:image" content="assets/imessage-preview.png"/>
     <title>SPELLBOVND | Home</title>
 
