--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <!-- build:css styles/styles.min.css -->
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/site.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <!-- endbuild -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
