--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
       <div>
         <div>
           <div class="video-container">
-            <video class="covervid-video" autoplay muted loop width="1920" height="1080">
+            <video class="covervid-video" autoplay muted loop playsinline width="1920" height="1080">
                 <source src="assets/promo1_compressed.mp4" type="video/mp4">
                 <source src="assets/promo1.webm" type="video/webm">
             </video>
