--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
           $('.video-container-2').css('display', 'none');
         });
       }, reason => {
-        // Failed to play initially 
+        // Failed to play initially
         $('.play-button').css('display', 'block');
         $('.video-container-2').css('display', 'block');
         $('.play-button').click(function() {
@@ -59,7 +59,7 @@
     <div id="sidenav-menu" class="sidenav">
       <div class="sidenav-site-links">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html" class="sidenav-link home-nav-link sidenav-selected-link">HOME</a>
+        <a href="" class="sidenav-link home-nav-link sidenav-selected-link">HOME</a>
         <a href="bio" class="sidenav-link bio-nav-link">BIO</a>
         <a href="music" class="sidenav-link music-nav-link">MUSIC</a>
         <a href="shop" class="sidenav-link shop-nav-link">SHOP</a>
@@ -83,7 +83,7 @@
           <span class="mobile-nav-text float-right">
             SPELLBOVND
           </span>
-          <a href="index.html" class="nav-link ms-0 home-nav-link">[ HOME ]</a>
+          <a href="" class="nav-link ms-0 home-nav-link">[ HOME ]</a>
           <a href="bio" class="nav-link bio-nav-link">BIO</a>
           <a href="music" class="nav-link music-nav-link">MUSIC</a>
           <a href="shop" class="nav-link shop-nav-link">SHOP</a>
